--- a/movies-android/app/src/main/res/values/colors.xml
+++ b/movies-android/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="red_40">#66B30202</color>
     <color name="red">#B30202</color>
     <color name="red_100">#FF0000</color>
+    <color name="my_red">#FF0000</color>
+
 </resources>
